--- a/src/app/core/components/navbar/navbar.component.html
+++ b/src/app/core/components/navbar/navbar.component.html
@@ -22,8 +22,8 @@
                         <li class="dropdown-submenu">
                             <a class="dropdown-item dropdown-submenu-toggle dropdown-toggle-arrow" href="#"><svg class="icon"><use xlink:href="#group"/></svg>Proveedores</a>
                             <ul class="dropdown-menu dropdown-menu-dark dropdown-submenu shadow">
-                                <li><a class="dropdown-item" href="#">Nuevo Proveedor</a></li>
-                                <li><a class="dropdown-item" href="#">Modificar Proveedor</a></li>
+                                <li><a class="dropdown-item" routerLink="/providers">Listar Proveedores</a></li>
+                                <li><a class="dropdown-item" routerLink="/providers/add">Nuevo Proveedor</a></li>
                             </ul>
                         </li>
                         <!--Inventario-->
