--- a/src/app/modules/persons/components/dialog-add-person/dialog-add-person.component.html
+++ b/src/app/modules/persons/components/dialog-add-person/dialog-add-person.component.html
@@ -1,5 +1,4 @@
-<button class="btn btn-success" type="button" data-bs-toggle="modal"
-        data-bs-target="#modalAddPerson"><i class="fa fa-plus"></i></button>
-<app-modal idModal="modalAddPerson" [showFooter]="false" title="Agregar Cliente">
-  <app-frm-client body (create)="onCreateClient($event)"></app-frm-client>
+<button class="btn btn-success" type="button" data-bs-toggle="modal" data-bs-target="#modalAddPerson"><i class="fa fa-plus"></i></button>
+<app-modal idModal="modalAddPerson" [showFooter]="false" [title]="title">
+    <app-frm-client [provider]="provider" body (create)="onCreateClient($event)"></app-frm-client>
 </app-modal>
