--- a/src/app/modules/config/general/views/general-config/general-config.component.html
+++ b/src/app/modules/config/general/views/general-config/general-config.component.html
@@ -1,5 +1,7 @@
+<app-general-main-view [validateUrl]=list.iva></app-general-main-view>
 <form class="card" #formGeneralConfig (ngSubmit)="onSubmit()" ngNativeValidate>
     <div class="card-body">
+        <!-- Configuración General -->
         <label class="label-title d-block">Configuración General</label>
         <div class="row">
             <div class="col-12 col-md-6">
