--- a/src/app/modules/inventory/articles/components/select-product/select-product.component.html
+++ b/src/app/modules/inventory/articles/components/select-product/select-product.component.html
@@ -4,7 +4,7 @@
     <input type="text" class="form-control" [(ngModel)]="code" id="code"
            placeholder="Cod. Nombre. Desc." (keypress)="searchProduct($event)">
   </div>
-  <div [class]="'col-6 col-md-'+(showCalc ? '4': '7')">
+  <div [class]="'col-6 col-md-'+(showCalc ? '3': '6')">
     <input type="text" class="form-control" placeholder="Producto/Servicio" [ngModel]="selectProduct.name" readonly>
   </div>
   <div class="col-6 col-md-1">
@@ -15,8 +15,10 @@
            onfocus="this.select()"
            (input)="calc()"
            (change)="calc()"
-           (keypress)="emitArticle($event)"
+           (keypress)="onEnterPress($event)"
            [(ngModel)]="selectProductCalc.qty"
+           [max]="selectProduct.stock"
+           min="0"
            id="qty" value="1">
   </div>
   <!--extra values-->
@@ -24,7 +26,8 @@
     <input type="number" class="form-control" placeholder="Desc %" value="0"
            (input)="calc()"
            (change)="calc()"
-           (keypress)="emitArticle($event)"
+           (keypress)="onEnterPress($event)"
+           min="0"
            [(ngModel)]="selectProductCalc.discount">
   </div>
   <div class="col-6 col-md-1" *ngIf="showCalc">
@@ -36,5 +39,12 @@
     <input type="number" class="form-control" placeholder="Total+Iva"
            [value]="validate.round(selectProductCalc.totalIva)"
            readonly>
+  </div>
+  <div class="col-6 col-md-1 d-flex text-end justify-content-center">
+    <button type="button" class="btn btn-light text-success" (click)="emitArticle()"
+            [disabled]="code && selectProduct.id && selectProductCalc.qty > 0"><i class="fa fa-plus"></i></button>
+    <button type="button" class="btn btn-light text-warning" (click)="initComponents()" *ngIf="code && selectProduct.id"
+            [disabled]="code && selectProduct.id"><i class="fa fa-eraser"></i></button>
+    <app-dialog-search-product [search]="code" (onSelect)="onSelectProduct($event)"></app-dialog-search-product>
   </div>
 </div>
