Nav en configuraciones

--- a/src/app/modules/config/general/views/general-config/general-config.component.html
+++ b/src/app/modules/config/general/views/general-config/general-config.component.html
@@ -1,4 +1,4 @@
-<app-general-main-view [validateUrl]=list.iva></app-general-main-view>
+<!-- <app-general-main-view [validateUrl]=list.iva></app-general-main-view> -->
 <form class="card" #formGeneralConfig (ngSubmit)="onSubmit()" ngNativeValidate>
     <div class="card-body">
         <!-- Configuración General -->
