--- a/src/app/modules/config/general/components/main-view/main-view-config.component.html
+++ b/src/app/modules/config/general/components/main-view/main-view-config.component.html
@@ -1,10 +1,20 @@
 <ul class="nav nav-tabs">
     <li class="nav-item">
-        <a class="active">
-            <a [ngClass]="(validateUrl == lista.iva )? 'nav-link active' : 'nav-link' " aria-current="page" href="/config">IVA</a>
-        </a>
+        <a class="nav-link active" data-bs-toggle="tab" href="#iva">IVA</a>
     </li>
     <li class="nav-item">
-        <a [ngClass]="(validateUrl == lista.elect_sign )? 'nav-link active' : 'nav-link' " aria-current="page" href="/config/sign">Fact. Electrónica</a>
+        <a class="nav-link" data-bs-toggle="tab" href="#factElect">Fact. Electrónica</a>
     </li>
 </ul>
+<div class="tab-content">
+    <div class="tab-pane active" id="iva">
+        <div class="row g-0 rounded">
+            <app-general-config></app-general-config>
+        </div>
+    </div>
+    <div class="tab-pane" id="factElect">
+        <div class="row g-0 rounded">
+            <app-general-elect-sign></app-general-elect-sign>
+        </div>
+    </div>
+</div>
