--- a/src/app/modules/enterprise/views/edit-enterprise/enterprise.component.html
+++ b/src/app/modules/enterprise/views/edit-enterprise/enterprise.component.html
@@ -60,6 +60,28 @@
             <label for="email" class="form-label">Correo: </label>
             <input type="email" id="email" [(ngModel)]="formData.email" name="email" class="form-control" required>
         </div>
+
+        <label class="label-title"><span>Datos de establecimiento</span></label>
+
+        <div class="mt-2">
+            <label for="addressEst" class="form-label">Dirección: </label>
+            <input type="addressEst" id="addressEst" [(ngModel)]="formData.addressEst" name="addressEst" class="form-control" required>
+        </div>
+        <div class="row g-2">
+            <div class="div col-6 col-md-4">
+                <label for="codEst" class="form-label">COD: </label>
+                <input type="number" id="codEst" [(ngModel)]="formData.codEst" name="codEst" class="form-control" (input)="onInputCode($event.target.value)" (change)="onInputCode($event.target.value)" required>
+            </div>
+            <div class="div col-6 col-md-4">
+                <label for="ptoEmi" class="form-label">Pto. Emisión: </label>
+                <input type="number" id="ptoEmi" [(ngModel)]="formData.ptoEmi" name="ptoEmi" class="form-control" (input)="onInputPto($event.target.value)" (change)="onInputPto($event.target.value)" required>
+            </div>
+            <div class="div col-6 col-md-4">
+                <label class="form-label">Nº Serie:</label>
+                <input class="form-control" [value]="cod_serie" disabled>
+            </div>
+        </div>
+
     </div>
 
     <div class="col-12 col-md-4 text-end mt-4">
