--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <ngx-loading-bar color="#198754" height="1.2px" [includeSpinner]="false"></ngx-loading-bar>
-<app-navbar *ngIf="auth"></app-navbar>
-<div class="container-fluid py-1">
-  <router-outlet></router-outlet>
-</div>
+<app-sidebar></app-sidebar>
+<main>
+  <app-navbar *ngIf="auth"></app-navbar>
+  <section class="body">
+    <div class="container-fluid py-1">
+      <router-outlet></router-outlet>
+    </div>
+  </section>
+</main>
+
