--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,10 +1,57 @@
-$primary: #05050e;
 $font-size-base: .91rem;
 $body-bg: #fafafa;
 $input-focus-box-shadow: none;
+
+$themeDark: false;
+$primary: #7289da;
+//$light: #99aab5;
+$dark: #23272a;
+$dark-2: #2c2f33;
+
+// appConfig
+//nav config
+$navHeight: 45px;
+$navBg: $body-bg;
+
+//aside config
+$asideWidth: 60px;
+$borderNavAside: 1px solid rgba(black, .14);
+
 //medidas
 $mobil: 576px;
 $tablet: 768px;
 $desktop: 992px;
 $xDesktop: 1200px;
 $xxDesktop: 1400px;
+
+
+$enable-rounded: false;
+$input-focus-box-shadow: initial;
+$font-size-base: .92rem !default;
+
+//dark mode
+/*
+$body-bg: $dark;
+$body-color: $light;
+$border-color: rgba($light, .3) !important;
+
+$component-active-color: $light;
+
+$input-bg:  $dark-2;
+$input-border-color: lighten($dark-2, 5);
+$input-box-shadow: initial;
+$input-focus-box-shadow: initial;
+
+$dropdown-bg: $dark-2;
+$dropdown-color: $light !important;
+$dropdown-link-color: $light;
+$dropdown-link-hover-bg: $dark;
+$dropdown-link-hover-color: $light;
+
+
+
+$card-bg: darken($dark, 1);
+$accordion-bg: darken($dark, 1);
+$modal-content-bg: $card-bg;
+$input-group-addon-bg: $card-bg;
+*/
