--- a/src/app/modules/persons/views/list-person/list-person.component.html
+++ b/src/app/modules/persons/views/list-person/list-person.component.html
@@ -31,12 +31,13 @@
                         <td>{{ p.email }}</td>
                         <td class="text-center">
                             <button class="s-btn text-danger" (click)="deletePerson(p)"><i class="fa fa-trash"></i></button>
-                            <a *ngIf="provider" class="s-btn text-info" [routerLink]="'/providers/'+p.doc+'/edit'"><i class="fa fa-pencil"></i></a>
-                            <a *ngIf="!provider" class="s-btn text-info" [routerLink]="'/persons/'+p.doc+'/edit'"><i class="fa fa-pencil"></i></a>
+                            <a *ngIf="provider" class="s-btn text-info" [routerLink]="'/providers/'+p.doc+'/edit'"><i class="fa fa-trash"></i></a>
+                            <a *ngIf="!provider" class="s-btn text-info" [routerLink]="'/persons/'+p.doc+'/edit'"><i class="fa fa-trash"></i></a>
                         </td>
                     </tr>
                     <tr *ngIf="persons.length <= 0">
-                        <td colspan="6" class="text-center text-muted">Aun no se han registrado clientes</td>
+                        <td *ngIf="provider" colspan="6" class="text-center text-muted">Aun no se han registrado proveedores</td>
+                        <td *ngIf="!provider" colspan="6" class="text-center text-muted">Aun no se han registrado clientes</td>
                     </tr>
                 </tbody>
             </table>
