--- a/src/app/modules/config/general/views/general-config/config.component.html
+++ b/src/app/modules/config/general/views/general-config/config.component.html
@@ -44,13 +44,13 @@
                     <div class="row g-2">
                         <div class="div col-6 col-md-4">
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked (change)="onCheckTest($event.target.checked)">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" [checked]="this.env_prod_flag" checked (change)="onCheckTest($event.target.checked)">
                                 <label class="form-check-label" for="exampleRadios1">
                                   PRUEBAS
                                 </label>
                             </div>
                             <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" (change)="onCheckTest(!$event.target.checked)">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2" [checked]="!this.env_prod_flag" (change)="onCheckTest(!$event.target.checked)">
                                 <label class="form-check-label" for="exampleRadios2">
                                   PRODUCCIÓN
                                 </label>
@@ -61,31 +61,21 @@
                     <div class="row g-2">
                         <div class="div col-6 col-md-6">
                             <label for="sign" class="form-label">Firma electrónica en formato p12</label>
-                            <input type="file" accept=".p12" name="sign" id="sign" class="form-control" (change)="onSelectFile($event)" required>
+                            <input type="file" accept=".p12" name="sign" id="sign" class="form-control" (change)="onSelectFile($event)">
                         </div>
                         <div class="div col-6 col-md-6">
                             <label for="cfdi_sign_expire" class="form-label">Fecha de expiración de la firma:</label>
-                            <input type="date" name="cfdi_sign_expire" id="cfdi_sign_expire" class="form-control" [value]="formData.cfdi_sign_expire" [(ngModel)]="formData.cfdi_sign_expire" required>
+                            <input type="date" name="cfdi_sign_expire" id="cfdi_sign_expire" class="form-control" [(ngModel)]="formData.cfdi_sign_expire" required>
                         </div>
                     </div>
                     <div class="row g-2">
                         <div class="div col-6 col-md-6">
-                            <!-- <div class="col-12 col-md-6">
-                                <label for="product_name" class="form-label">Nombre: *</label>
-                                <input type="text" id="product_name" [(ngModel)]="formData.name" name="product_name" class="form-control" required>
-                            </div> -->
                             <label for="cfdi_business_key" class="form-label">Clave empresarial</label>
-                            <input [type]="type" name="cfdi_business_key" id="cfdi_business_key" maxlength="8" minlength="8" value="formData.cfdi_business_key" [(ngModel)]="formData.cfdi_business_key" class="form-control" required>
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" id="flexCheckDefault" (change)="onChangeCheck($event.target.checked)">
-                                <label class="form-check-label" for="flexCheckDefault">
-                                    Mostrar contraseña
-                                </label>
-                            </div>
+                            <input type="text" name="cfdi_business_key" id="cfdi_business_key" maxlength="8" minlength="8" value="formData.cfdi_business_key" [(ngModel)]="formData.cfdi_business_key" class="form-control" required>
                         </div>
                         <div class="div col-6 col-md-6">
                             <label for="cfdi_sign_pw" class="form-label">Clave de firma electrónica</label>
-                            <input [type]="type" name="cfdi_sign_pw" id="cfdi_sign_pw" [(ngModel)]="formData.cfdi_sign_pw" value="formData.cfdi_sign_pw" class="form-control" required>
+                            <input [type]="type" name="cfdi_sign_pw" id="cfdi_sign_pw" [(ngModel)]="formData.cfdi_sign_pw" value="formData.cfdi_sign_pw" class="form-control">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" (change)="onChangeCheck($event.target.checked)">
                                 <label class="form-check-label" for="flexCheckDefault">
@@ -106,13 +96,13 @@
 
                         <div class="div col-6 col-md-6">
                             <label for="cdfi_wait" class="form-label">Segundos (Tiempo de espera SRI):</label>
-                            <input type="number" name="cdfi_wait" id="cdfi_wait" class="form-control" [(ngModel)]="formData.cdfi_wait" value="formData.cdfi_wait" min="3" required>
+                            <input type="number" name="cdfi_wait" id="cdfi_wait" class="form-control" [(ngModel)]="formData.cdfi_wait" value="formData.cdfi_wait" min="3">
                         </div>
                     </div>
                     <div class="row g-2 mt-2">
                         <div class="div col-6 col-md-4">
                             <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" (change)="onCheckSendMail($event.target.checked)">
+                                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" (change)="onCheckSendMail($event.target.checked)" [checked]="this.send_mail_flag">
                                 <label class="form-check-label" for="flexSwitchCheckDefault">Envio de correos automaticos despues de la autorización</label>
                             </div>
                         </div>
