--- a/src/app/modules/persons/components/frm-person/frm-person.component.html
+++ b/src/app/modules/persons/components/frm-person/frm-person.component.html
@@ -42,7 +42,7 @@
             </div>
             <div class="div col-6 col-md-4">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" id="email" [(ngModel)]="formData.email" name="email" class="form-control" required>
+                <input type="email" id="email" [(ngModel)]="formData.email" name="email" class="form-control">
             </div>
 
             <div class="div col-6 col-md-4">
