--- a/src/app/modules/persons/views/edit-person/edit-person.component.html
+++ b/src/app/modules/persons/views/edit-person/edit-person.component.html
@@ -1,5 +1,7 @@
-<div class="card">
-  <div class="card-body">
-    <app-frm-client [formData]="person" [edit]="true"></app-frm-client>
-  </div>
-</div>
+<with-loader [loader]="loader">
+    <div class="card">
+        <div class="card-body">
+            <app-frm-client [formData]="person" [edit]="true"></app-frm-client>
+        </div>
+    </div>
+</with-loader>
